--- a/Exercise4_TAdhikari-Extra.ipynb
+++ b/Exercise4_TAdhikari-Extra.ipynb
@@ -1124,11 +1124,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The algorithm I created to create a sentiment for comment does not work with bigger dataset. However, up until kmeans, the code works fine. For sentiment prediction it will need a different method."
+   ]
   }
  ],
  "metadata": {
