--- a/Exercise4_TAdhikari.ipynb
+++ b/Exercise4_TAdhikari.ipynb
@@ -859,6 +859,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To do a simple sentiment analysis for small data set with few words, I decided to focus on each word's sentiment instead of sentiment_coefficient.\n",
+    "\n",
+    "Following code, takes word list from each comment, looks up word in words dataframe and retreives cluster_value which is the sentiment of the word. It creates a dictionary with the counts of positive and negative words for each comments and then compares the two values. This returns the sentiment of each comment. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 571,
    "metadata": {},
@@ -905,6 +914,14 @@
     "            None\n",
     "    return x\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following code iterate through each row of the df and turn comments into string and then list of words.\n",
+    "Further it's passsed to function sentiment_analyzer"
    ]
   },
   {
@@ -1173,7 +1190,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data didn't have sentiment associated with it, so I decided to take unsupervised approach for a small dataset. I used word2vec model, kmeans clustering algorithm and my own algorithm to do my own analysis. For Word2vec we used CBOW architecture code can be found here [](url_here)"
+    "The data didn't have sentiment associated with it, so I decided to take unsupervised approach for a small dataset. I used word2vec model, kmeans clustering algorithm and my own algorithm to do my own analysis. For Word2vec we used CBOW architecture code can be found here [myGitHub](https://github.com/adhtani/DSC550/blob/master/Exercise4_TAdhikari.ipynb). I also followed procedure from this tutorial [Unsupervised Sentiment Analysis](https://towardsdatascience.com/unsupervised-sentiment-analysis-a38bf1906483). I created bigrams of words detection and replaced with gensim’s Phrases module (see In [559]) and used that to create word2vec model, further I build a vocabulary and trained the model.\n",
+    "\n",
+    "These are initial steps before kmeans clustering algorithm. I used sklearn’s K-means algorithm with 100 iterations of reassigning points to clusters and used 2 clusters. I checked with gensim’s most_similar method to see which word vectors are similar to first cluster. I created a df with words and their sentiment coefficient.\n",
+    "\n",
+    "Furthermore, I created a simple algorithm that will count the positive and negative words in each comments. and assign sentiments based on number of positive and negative words see [571, 572, 573]).\n",
+    "I further checked the accuracy based on results from Textblob which is another python library that has a pre-trained dataset and uses Naive bayes classifier to predict sentiment.\n",
+    "\n",
+    "Results were fairly accurate based on the assigned positive and negative values. However, simple counting good and bad words is not the best approach because sentiment analysis works by looking at the pattern within the data. This will not work when the dataset is big with complex texts such as tweets. In my extra exercise file I tried this method with 20 stocktwits data, and I got inaccurate results. So for the bigger dataset **Tfidf weighting** for sentiment prediction will work better with complex data."
    ]
   }
  ],
